--- a/bat/abs.html
+++ b/bat/abs.html
@@ -200,7 +200,7 @@
                                     <i class="fa-solid fa-search"
                                         style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
                                     <input type="text" id="bus-stop-search" class="form-control"
-                                        placeholder=" Search for a Bus Stop" style="padding-left: 35px; width: 100%;">
+                                        placeholder=" Search Bus Stop" style="padding-left: 35px; width: 100%;">
                                 </div>
 
                             </div>
@@ -251,11 +251,11 @@
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
             <div class="list-group">
-                <p>Fetching Bus Stops List for the first time...</p>
+                <p style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;"><span class="spinner"></span>Fetching Bus Stops list for the first time...</p>
             </div>
             <div class="pagination-buttons" style="text-align: center; margin-top: 20px;">
-                <button id="prev-button" class="btn btn-secondary" disabled>Previous</button>
-                <button id="next-button" class="btn btn-primary">Next</button>
+                <button id="prev-button" class="btn btn-secondary" style="display: none;">Previous</button>
+                <button id="next-button" class="btn btn-primary" style="display: none;">Next</button>
             </div>
         </div>
     </section>
@@ -310,134 +310,144 @@
 
     <script src="../js/utils.js"></script>
 
-<script>
-    document.addEventListener('DOMContentLoaded', async () => {
-        const searchInput = document.getElementById('bus-stop-search'); // Search input field
-        const searchBusStopButton = document.getElementById('search-bus-stop-button'); // Search Bus Stop button
+    <script>
+        document.addEventListener('DOMContentLoaded', async () => {
+            const searchInput = document.getElementById('bus-stop-search'); // Search input field
+            const searchBusStopButton = document.getElementById('search-bus-stop-button'); // Search Bus Stop button
 
-        // Clear the search bar when the "Search Bus Stop" button is clicked
-        searchBusStopButton.addEventListener('click', () => {
-            searchInput.value = ''; // Clear the search input field
-        });
+            // Clear the search bar when the "Search Bus Stop" button is clicked
+            searchBusStopButton.addEventListener('click', () => {
+                searchInput.value = ''; // Clear the search input field
+            });
 
-        const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-stops'; // API URL
-        const listGroup = document.querySelector('.list-group'); // Select the existing list-group container
-        const prevButton = document.getElementById('prev-button'); // Previous button
-        const nextButton = document.getElementById('next-button'); // Next button
-        const limit = 20; // Number of items per page
-        let allBusStops = []; // Store all fetched bus stops for searching
-        let currentPage = 1; // Current page number
-        let totalPages = 1; // Total number of pages
+            const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-stops'; // API URL
+            const listGroup = document.querySelector('.list-group'); // Select the existing list-group container
+            const prevButton = document.getElementById('prev-button'); // Previous button
+            const nextButton = document.getElementById('next-button'); // Next button
+            const limit = 20; // Number of items per page
+            let allBusStops = []; // Store all fetched bus stops for searching
+            let currentPage = 1; // Current page number
+            let totalPages = 1; // Total number of pages
 
-        // Function to fetch all bus stops in batches
-        async function fetchAllBusStops() {
-            let allBusStops = [];
-            let skip = 0;
-            const batchSize = 500; // Fetch in batches of 500 (or adjust based on API limits)
+            // Function to fetch all bus stops in batches
+            async function fetchAllBusStops() {
+                let allBusStops = [];
+                let skip = 0;
+                const batchSize = 500; // Fetch in batches of 500 (or adjust based on API limits)
 
-            while (true) {
-                try {
-                    const response = await fetch(`${apiUrl}?$skip=${skip}&$top=${batchSize}`, {
-                        method: 'GET',
-                        headers: {
-                            accept: 'application/json',
-                        },
-                    });
+                while (true) {
+                    try {
+                        const response = await fetch(`${apiUrl}?$skip=${skip}&$top=${batchSize}`, {
+                            method: 'GET',
+                            headers: {
+                                accept: 'application/json',
+                            },
+                        });
 
-                    if (!response.ok) {
-                        throw new Error('Failed to fetch bus stops');
+                        if (!response.ok) {
+                            throw new Error('Failed to fetch bus stops');
+                        }
+
+                        const data = await response.json();
+                        allBusStops = allBusStops.concat(data.value);
+
+                        if (data.value.length < batchSize) {
+                            break; // Exit loop if fewer than `batchSize` items are returned
+                        }
+
+                        skip += batchSize; // Increment skip for the next batch
+                    } catch (error) {
+                        console.error('Error fetching bus stops:', error);
+                        break;
                     }
-
-                    const data = await response.json();
-                    allBusStops = allBusStops.concat(data.value);
-
-                    if (data.value.length < batchSize) {
-                        break; // Exit loop if fewer than `batchSize` items are returned
-                    }
-
-                    skip += batchSize; // Increment skip for the next batch
-                } catch (error) {
-                    console.error('Error fetching bus stops:', error);
-                    break;
                 }
+
+                // Save the fetched bus stops to localStorage
+                localStorage.setItem('allBusStops', JSON.stringify(allBusStops));
+                return allBusStops;
             }
 
-            // Save the fetched bus stops to localStorage
-            localStorage.setItem('allBusStops', JSON.stringify(allBusStops));
-            return allBusStops;
-        }
+            // Function to display bus stops for the current page
+            function displayBusStops(busStops, page) {
+                const startIndex = (page - 1) * limit;
+                const endIndex = startIndex + limit;
+                const paginatedBusStops = busStops.slice(startIndex, endIndex);
 
-        // Function to display bus stops for the current page
-        function displayBusStops(busStops, page) {
-            const startIndex = (page - 1) * limit;
-            const endIndex = startIndex + limit;
-            const paginatedBusStops = busStops.slice(startIndex, endIndex);
+                // Clear the list group and display the bus stops
+                listGroup.innerHTML = '';
+                if (busStops.length === 0) {
+                    listGroup.innerHTML = '<p>Fetching Bus Stops List for the first time...</p>';
+                    prevButton.style.display = 'none'; // Hide buttons if fetching message is shown
+                    nextButton.style.display = 'none';
+                    return;
+                }
 
-            // Clear the list group and display the bus stops
-            listGroup.innerHTML = '';
-            paginatedBusStops.forEach((busStop) => {
-                const listItem = document.createElement('a');
-                listItem.href = `bat.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`; // Pass BusStopCode as a query parameter
-                listItem.className = 'list-group-item list-group-item-action bus-stop-code';
-                listItem.setAttribute('data-code', busStop.BusStopCode);
-                listItem.setAttribute('data-description', busStop.Description);
-                listItem.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
-                listGroup.appendChild(listItem);
+                paginatedBusStops.forEach((busStop) => {
+                    const listItem = document.createElement('a');
+                    listItem.href = `bat.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`; // Pass BusStopCode as a query parameter
+                    listItem.className = 'list-group-item list-group-item-action bus-stop-code';
+                    listItem.setAttribute('data-code', busStop.BusStopCode);
+                    listItem.setAttribute('data-description', busStop.Description);
+                    listItem.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
+                    listGroup.appendChild(listItem);
+                });
+
+                // Check if there are any items to display
+                const hasItems = paginatedBusStops.length > 0;
+
+                // Update button states
+                prevButton.style.display = hasItems && page > 1 ? 'inline-block' : 'none';
+                nextButton.style.display = hasItems && page < totalPages ? 'inline-block' : 'none';
+            }
+
+            // Function to filter bus stops based on search input
+            function filterBusStops(query) {
+                const filteredBusStops = allBusStops.filter((busStop) => {
+                    const busStopCode = busStop.BusStopCode.toLowerCase();
+                    const description = busStop.Description.toLowerCase();
+                    return busStopCode.includes(query) || description.includes(query);
+                });
+
+                totalPages = Math.ceil(filteredBusStops.length / limit);
+                currentPage = 1; // Reset to the first page
+                displayBusStops(filteredBusStops, currentPage);
+            }
+
+            // Add event listener to the search input
+            searchInput.addEventListener('input', (event) => {
+                const query = event.target.value.toLowerCase(); // Get the search query in lowercase
+                filterBusStops(query); // Filter the bus stops based on the search query
             });
 
-            // Update button states
-            prevButton.disabled = page === 1;
-            nextButton.disabled = page === totalPages;
-        }
-
-        // Function to filter bus stops based on search input
-        function filterBusStops(query) {
-            const filteredBusStops = allBusStops.filter((busStop) => {
-                const busStopCode = busStop.BusStopCode.toLowerCase();
-                const description = busStop.Description.toLowerCase();
-                return busStopCode.includes(query) || description.includes(query);
+            // Add event listeners to pagination buttons
+            prevButton.addEventListener('click', () => {
+                if (currentPage > 1) {
+                    currentPage--;
+                    displayBusStops(allBusStops, currentPage);
+                }
             });
 
-            totalPages = Math.ceil(filteredBusStops.length / limit);
-            currentPage = 1; // Reset to the first page
-            displayBusStops(filteredBusStops, currentPage);
-        }
+            nextButton.addEventListener('click', () => {
+                if (currentPage < totalPages) {
+                    currentPage++;
+                    displayBusStops(allBusStops, currentPage);
+                }
+            });
 
-        // Add event listener to the search input
-        searchInput.addEventListener('input', (event) => {
-            const query = event.target.value.toLowerCase(); // Get the search query in lowercase
-            filterBusStops(query); // Filter the bus stops based on the search query
-        });
-
-        // Add event listeners to pagination buttons
-        prevButton.addEventListener('click', () => {
-            if (currentPage > 1) {
-                currentPage--;
-                displayBusStops(allBusStops, currentPage);
+            // Load bus stops from localStorage or fetch from API
+            const cachedBusStops = localStorage.getItem('allBusStops');
+            if (cachedBusStops) {
+                console.log('Loading bus stops from localStorage...');
+                allBusStops = JSON.parse(cachedBusStops);
+            } else {
+                console.log('Fetching all bus stops...');
+                allBusStops = await fetchAllBusStops();
             }
+
+            totalPages = Math.ceil(allBusStops.length / limit); // Calculate total pages
+            displayBusStops(allBusStops, currentPage); // Display the first page
         });
-
-        nextButton.addEventListener('click', () => {
-            if (currentPage < totalPages) {
-                currentPage++;
-                displayBusStops(allBusStops, currentPage);
-            }
-        });
-
-        // Load bus stops from localStorage or fetch from API
-        const cachedBusStops = localStorage.getItem('allBusStops');
-        if (cachedBusStops) {
-            console.log('Loading bus stops from localStorage...');
-            allBusStops = JSON.parse(cachedBusStops);
-        } else {
-            console.log('Fetching all bus stops...');
-            allBusStops = await fetchAllBusStops();
-        }
-
-        totalPages = Math.ceil(allBusStops.length / limit); // Calculate total pages
-        displayBusStops(allBusStops, currentPage); // Display the first page
-    });
-</script>
+    </script>
 
 </body>
 
