--- a/bat/bat.html
+++ b/bat/bat.html
@@ -325,171 +325,173 @@
     <script src="../js/utils.js"></script>
 
 
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-        const searchInput = document.getElementById('bus-stop-search'); // Search input field
-        const tableBody = document.querySelector('table tbody'); // Table body
-        const footer = document.querySelector('.footer'); // Footer
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const searchInput = document.getElementById('bus-stop-search'); // Search input field
+            const tableBody = document.querySelector('table tbody'); // Table body
+            const footer = document.querySelector('.footer'); // Footer
 
-        let idleTimeout; // Timer for idle detection
-        let isIdle = false; // Flag to track if the user is idle
-        const idleTimeLimit = 20000; // 20 seconds of inactivity to consider idle
+            let idleTimeout; // Timer for idle detection
+            let isIdle = false; // Flag to track if the user is idle
+            const idleTimeLimit = 20000; // 20 seconds of inactivity to consider idle
 
-        // Get the BusStopCode from the URL
-        const urlParams = new URLSearchParams(window.location.search);
-        const busStopCode = urlParams.get('BusStopCode');
+            // Get the BusStopCode from the URL
+            const urlParams = new URLSearchParams(window.location.search);
+            const busStopCode = urlParams.get('BusStopCode');
 
-        if (busStopCode) {
-            searchInput.value = busStopCode;
-            fetchBusArrivals();
-        } else {
-            const savedSearch = sessionStorage.getItem('busStopSearch');
-            if (savedSearch) {
-                searchInput.value = savedSearch;
+            if (busStopCode) {
+                searchInput.value = busStopCode;
                 fetchBusArrivals();
             } else {
-                tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code</td></tr>';
-                footer.style.display = 'block';
-            }
-        }
-
-        const updateUrl = () => {
-            const url = new URL(window.location.href);
-            const currentValue = searchInput.value.trim();
-
-            if (currentValue) {
-                url.searchParams.set('busStopCode', currentValue);
-            } else {
-                url.searchParams.delete('busStopCode');
+                const savedSearch = sessionStorage.getItem('busStopSearch');
+                if (savedSearch) {
+                    searchInput.value = savedSearch;
+                    fetchBusArrivals();
+                } else {
+                    tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code</td></tr>';
+                    footer.style.display = 'block';
+                }
             }
 
-            window.history.replaceState({}, document.title, url.toString());
-        };
+            const updateUrl = () => {
+                const url = new URL(window.location.href);
+                const currentValue = searchInput.value.trim();
 
-        searchInput.addEventListener('input', debounce(() => {
-            updateUrl();
-            fetchBusArrivals();
-        }, 300));
+                if (currentValue) {
+                    url.searchParams.set('busStopCode', currentValue);
+                } else {
+                    url.searchParams.delete('busStopCode');
+                }
 
-        // Auto-refresh data when idle
-        const startAutoRefresh = () => {
-            if (!isIdle) {
-                isIdle = true;
+                window.history.replaceState({}, document.title, url.toString());
+            };
+
+            searchInput.addEventListener('input', debounce(() => {
+                updateUrl();
                 fetchBusArrivals();
-                setInterval(() => {
-                    if (isIdle) {
-                        fetchBusArrivals();
-                    }
-                }, 15000); // Refresh every 15 seconds
-            }
-        };
+            }, 300));
 
-        const resetIdleTimer = () => {
-            isIdle = false;
-            clearTimeout(idleTimeout);
-            idleTimeout = setTimeout(startAutoRefresh, idleTimeLimit);
-        };
+            // Auto-refresh data when idle
+            const startAutoRefresh = () => {
+                if (!isIdle) {
+                    isIdle = true;
+                    fetchBusArrivals();
+                    setInterval(() => {
+                        if (isIdle) {
+                            fetchBusArrivals();
+                        }
+                    }, 15000); // Refresh every 15 seconds
+                }
+            };
 
-        // Detect user activity
-        ['mousemove', 'keydown', 'scroll', 'touchstart'].forEach(event => {
-            window.addEventListener(event, resetIdleTimer);
-        });
+            const resetIdleTimer = () => {
+                isIdle = false;
+                clearTimeout(idleTimeout);
+                idleTimeout = setTimeout(startAutoRefresh, idleTimeLimit);
+            };
 
-        // Start the idle timer
-        resetIdleTimer();
-    });
-
-    function debounce(func, delay) {
-        let timeout;
-        return function (...args) {
-            clearTimeout(timeout);
-            timeout = setTimeout(() => func.apply(this, args), delay);
-        };
-    }
-
-    async function fetchBusArrivals() {
-        try {
-            const searchInput = document.getElementById('bus-stop-search').value.trim();
-            const tableBody = document.querySelector('table tbody');
-            const footer = document.querySelector('.footer');
-
-            if (!searchInput) {
-                tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code</td></tr>';
-                footer.style.display = 'none';
-                return;
-            }
-
-            const url = new URL('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
-            url.searchParams.append('BusStopCode', searchInput);
-
-            const response = await fetch(url);
-
-            if (!response.ok) {
-                throw new Error('Failed to fetch bus arrivals');
-            }
-
-            const data = await response.json();
-            console.log('API Response:', data);
-
-            tableBody.innerHTML = '';
-
-            if (!data.Services || data.Services.length === 0) {
-                tableBody.innerHTML = '<tr><td colspan="3">No data available</td></tr>';
-                footer.style.display = 'block';
-                return;
-            }
-
-            data.Services.forEach((service) => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                <td class="svcNumtd">
-                    <p class="svcNum">${service.ServiceNo}</p>
-                </td>
-                <td class="departure-spacing">
-                    <span class="bus-time">
-                        ${service.NextBus.EstimatedArrival ? formatArrivalTime(service.NextBus.EstimatedArrival) : '-'} 
-                        &nbsp; 
-                        ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}
-                    </span>
-                    <span class="bus-time">
-                        ${service.NextBus2.EstimatedArrival ? formatArrivalTime(service.NextBus2.EstimatedArrival) : ''} 
-                        &nbsp; 
-                        ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" style="width: 30px; height: auto;">` : ''}
-                    </span>
-                </td>
-                <td> 
-                    ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}
-                </td>
-            `;
-                tableBody.appendChild(row);
+            // Detect user activity
+            ['mousemove', 'keydown', 'scroll', 'touchstart'].forEach(event => {
+                window.addEventListener(event, resetIdleTimer);
             });
 
-        } catch (error) {
-            console.error('Error fetching bus arrivals:', error);
-            const tableBody = document.querySelector('table tbody');
-            const footer = document.querySelector('.footer');
-            tableBody.innerHTML = '<tr><td colspan="3">Error loading data</td></tr>';
-            footer.style.display = 'block';
+            // Start the idle timer
+            resetIdleTimer();
+        });
+
+        function debounce(func, delay) {
+            let timeout;
+            return function (...args) {
+                clearTimeout(timeout);
+                timeout = setTimeout(() => func.apply(this, args), delay);
+            };
         }
-    }
 
-    function formatArrivalTime(isoString) {
-        const date = new Date(isoString);
-        const hours = date.getHours().toString().padStart(2, '0');
-        const minutes = date.getMinutes().toString().padStart(2, '0');
-        const formattedTime = `${hours}:${minutes}`;
+        async function fetchBusArrivals() {
+            try {
+                const searchInput = document.getElementById('bus-stop-search').value.trim();
+                const tableBody = document.querySelector('table tbody');
+                const footer = document.querySelector('.footer');
 
-        const now = new Date();
-        const currentHours = now.getHours().toString().padStart(2, '0');
-        const currentMinutes = now.getMinutes().toString().padStart(2, '0');
-        const currentTime = `${currentHours}:${currentMinutes}`;
+                if (!searchInput) {
+                    tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code</td></tr>';
+                    footer.style.display = 'none'; // Hide footer if no input
+                    return;
+                }
 
-        if (formattedTime === currentTime) {
-            return `<span class="arrival-now">Arr</span>`;
+                const url = new URL('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
+                url.searchParams.append('BusStopCode', searchInput);
+
+                const response = await fetch(url);
+
+                if (!response.ok) {
+                    throw new Error('Failed to fetch bus arrivals');
+                }
+
+                const data = await response.json();
+                console.log('API Response:', data);
+
+                tableBody.innerHTML = '';
+
+                if (!data.Services || data.Services.length === 0) {
+                    tableBody.innerHTML = '<tr><td colspan="3">No data available</td></tr>';
+                    footer.style.display = 'none'; // Hide footer if no data
+                    return;
+                }
+
+                data.Services.forEach((service) => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+            <td class="svcNumtd">
+                <p class="svcNum">${service.ServiceNo}</p>
+            </td>
+            <td class="departure-spacing">
+                <span class="bus-time">
+                    ${service.NextBus.EstimatedArrival ? formatArrivalTime(service.NextBus.EstimatedArrival) : '-'} 
+                    &nbsp; 
+                    ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}
+                </span>
+                <span class="bus-time">
+                    ${service.NextBus2.EstimatedArrival ? formatArrivalTime(service.NextBus2.EstimatedArrival) : ''} 
+                    &nbsp; 
+                    ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" style="width: 30px; height: auto;">` : ''}
+                </span>
+            </td>
+            <td> 
+                ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}
+            </td>
+        `;
+                    tableBody.appendChild(row);
+                });
+
+                footer.style.display = 'block'; // Show footer if data is available
+
+            } catch (error) {
+                console.error('Error fetching bus arrivals:', error);
+                const tableBody = document.querySelector('table tbody');
+                const footer = document.querySelector('.footer');
+                tableBody.innerHTML = '<tr><td colspan="3">Error loading data</td></tr>';
+                footer.style.display = 'none'; // Hide footer on error
+            }
         }
-        return formattedTime;
-    }
-</script>
+
+        function formatArrivalTime(isoString) {
+            const date = new Date(isoString);
+            const hours = date.getHours().toString().padStart(2, '0');
+            const minutes = date.getMinutes().toString().padStart(2, '0');
+            const formattedTime = `${hours}:${minutes}`;
+
+            const now = new Date();
+            const currentHours = now.getHours().toString().padStart(2, '0');
+            const currentMinutes = now.getMinutes().toString().padStart(2, '0');
+            const currentTime = `${currentHours}:${currentMinutes}`;
+
+            if (formattedTime === currentTime) {
+                return `<span class="arrival-now">Arr</span>`;
+            }
+            return formattedTime;
+        }
+    </script>
 
 </body>
 
